--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "trello-node-api": "^0.0.9",
     "typeorm": "^0.3.9"
   },
   "devDependencies": {
