--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,31 @@
-version: "3"
+version: "3.9"
+
+networks:
+  default:
+    external: false
+    name: caroline-network
+
 services:
-  postgres:
-    container_name: postgres
+  caroline-db:
     image: postgres:latest
+    environment:
+      POSTGRES_PASSWORD: "${POSTGRES_DEFAULT_PASSWORD}"
     ports:
       - "5432:5432"
     volumes:
       - /data/postgres:/data/postgres
-    env_file:
-      - docker.env
+
+  caroline-app:
+    build:
+      context: ../caroline
+      target: builder
+    ports:
+      - "3000:3000"
+    volumes:
+      - ../caroline:/app
+      - /app/node_modules
+    command: /bin/sh -c "npx prisma migrate dev --name new-migration && npm run start:dev"
+    depends_on:
+      - caroline-db
+    environment:
+      DATABASE_URL: "${CAROLINE_DB_URL}"
