refactor: package.json

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "supertokens-node": "^12.1.1",
     "trello": "^0.11.0"
   },
   "devDependencies": {
