--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -7,11 +7,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+
+      - name: Set up NodeJS
+        uses: actions/setup-node@v3
         with:
           node-version: 16
+          cache: 'npm'
+
+      - name: Intall and build
+        run: |
+          npm install
+          npm run build --if-present
+
       - name: Run tests
-        run: npm run test
+        run: npm run test --if-present
 
       - name: Build container
         run: docker build . -t caroline/backend:latest
