--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-fastify": "^9.2.1",
     "@nestjs/swagger": "^6.1.2",
     "@prisma/client": "^4.4.0",
+    "asana": "^1.0.0",
     "jira-connector": "^3.1.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
